bin/testsuite/tests/compiler/src/errors/compiler5590.swg
#global testerror "Err0660"

#test
{
    (x, y) ~= 1
}
